--- a/NetworkPostDemo/Base.lproj/Main.storyboard
+++ b/NetworkPostDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="COO-aS-eLh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HZT-aj-NAE">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -37,7 +37,7 @@
             </objects>
             <point key="canvasLocation" x="-54" y="141"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Lyk Home-->
         <scene sceneID="WLL-xu-zLH">
             <objects>
                 <collectionViewController id="COO-aS-eLh" customClass="CollectionViewController" customModule="NetworkPostDemo" customModuleProvider="target" sceneMemberID="viewController">
@@ -66,10 +66,31 @@
                             <outlet property="delegate" destination="COO-aS-eLh" id="i6A-aB-dee"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" title="Lyk Home" id="7p1-aO-o5n"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xex-08-Ksp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="810" y="183"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YRc-ZL-ZDs">
+            <objects>
+                <navigationController id="HZT-aj-NAE" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="N3r-nT-y0z">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.91371842616580312" green="0.57924553351237917" blue="0.5898881957920562" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="COO-aS-eLh" kind="relationship" relationship="rootViewController" id="5yR-Cg-kt7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yqo-qj-kp2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1697" y="141"/>
         </scene>
     </scenes>
 </document>
